# pid-tuning-gui

./: .gitignore  README.md  app.py  config.json  esp_simulator.py  layout.py  sent.json  serial_transmit.py  server_test.py  tcp_recv_udp_send.py  tcp_server.py  test.py  udp_server.py  untitled.ui  update_plot.py
UI/: layout.py  layout.ui
cpp_app/: CMakeLists.txt  README.md  conanfile.txt  data_handler.cpp  data_handler.h  graph_renderer.cpp  graph_renderer.h  main.cpp  moc_data_handler.cpp  moc_graph_renderer.cpp  moc_qcustomplot.cpp  pid_message_config.h  pid_plotter_res.qrc  pid_tuning_gui_qt  pid_tuning_gui_qt.pro  pid_tuning_gui_qt_en_IN.ts  qcustomplot.cpp  qcustomplot.h  ui.cpp  ui.h  window.cpp  window.h
cpp_app/apps/: CMakeLists.txt  PID-Tuning-app  main.cpp
cpp_app/include/libserver/: server.hpp
cpp_app/src/: CMakeLists.txt  server.cpp
cpp_app/stylesheets/: material-blue.qss
cpp_app/tests/: CMakeLists.txt  example_test.cpp  main.cpp
docs/: Cinnamon-Jan-19-2020_19:21:53pm.mkv
esp_codes/: json_handler.c
esp_codes/encoded_motor/: encoder.c  init_sra.c  motor.c  rosserial.cpp
esp_codes/encoded_motor/include/: encoder.h  init_sra.h  motor.h  pin_defs.h  rosserial.h
esp_codes/udp_transmit/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
esp_codes/udp_transmit/main/: CMakeLists.txt  Kconfig  json_handler.c  main.c  plotter.c  tcp_handler.c  transport.c  udp_handler.c  udp_handler.cpp
esp_codes/udp_transmit/main/include/: json_handler.h  pid_plotter.h  plotter.h  tcp_handler.h  transport.h  udp_handler.h
py_app/: requirement.txt  sent.json
py_app/server/: tcp.py  udp.py
py_app/ui/: layout.py  layout.ui  pid_plotter_res.qrc
server/: tcp.py  udp.py
tests/: udp_client.py  udp_server.py
